--- a/src/www/main.css
+++ b/src/www/main.css
@@ -6,3 +6,12 @@ body {
   font-size: 13px;
   line-height: 20px;
 }
+.item{
+  height: 35px;
+text-align: left;
+border: 1px solid rgb(0, 188, 212);
+}
+
+.best{
+  color:rgb(0, 188, 212);
+}
